<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mvherzog.blinkmap_dataflow.MainActivity">

    <!--Welcome-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <!--Connect-->

    <!--Origin text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayOrigin"
        android:layout_below="@+id/btnConnect"/>

    <!--Origin latitude-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oLat"
        android:visibility="gone"
        android:layout_below="@+id/btnConnect"
        android:layout_centerHorizontal="true"/>

    <!--Origin longitude-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oLng"
        android:visibility="gone"
        android:layout_below="@+id/btnConnect"
        android:layout_centerHorizontal="true"/>

    <!--Destination input-->
    <TextView
        android:text="@string/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/enterDest"
        android:layout_above="@+id/inputDestination"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnConnect"
        android:layout_alignBaseline="@+id/btnDisconnect"
        android:layout_alignBottom="@+id/btnDisconnect"
        android:layout_toEndOf="@+id/displayOrigin"
        android:layout_marginStart="56dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dummyDest"
        android:layout_marginTop="158dp"
        android:id="@+id/inputDestination"
        android:inputType="textPostalAddress|textCapWords|textAutoCorrect|textAutoComplete"
        android:imeOptions="actionSend"
        android:layout_below="@+id/displayOrigin"
        android:layout_toEndOf="@+id/displayOrigin"/>

    <Button
        android:text="@string/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:id="@+id/btnDisconnect"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/btnConnect"/>


</RelativeLayout>
